attached_assets/Pasted--Processing-esp32doit-devkit-v1-platform-espressif32-bo_1783007355099.txt

Processing esp32doit-devkit-v1 (platform: espressif32; board: esp32doit-devkit-v1; framework: arduino)
--------------------------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32doit-devkit-v1.html
PLATFORM: Espressif 32 (7.0.1) > DOIT ESP32 DEVKIT V1
HARDWARE: ESP32 240MHz, 320KB RAM, 4MB Flash
DEBUG: Current (cmsis-dap) External (cmsis-dap, esp-bridge, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - framework-arduinoespressif32 @ 3.20017.241212+sha.dcc1105b 
 - tool-esptoolpy @ 2.41100.0 (4.11.0) 
 - toolchain-xtensa-esp32 @ 8.4.0+2021r2-patch5
Converting gyro_controller.ino
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 35 compatible libraries
Scanning dependencies...
Dependency Graph
|-- ESP32Servo @ 3.2.1
|-- arduinoFFT @ 2.0.4
|-- ArduinoOTA @ 2.0.0
|-- Update @ 2.0.0
|-- WebServer @ 2.0.0
|-- WiFi @ 2.0.0
|-- Wire @ 2.0.0
Building in release mode
Compiling .pio\build\esp32doit-devkit-v1\src\gyro_controller.ino.cpp.o
Compiling .pio\build\esp32doit-devkit-v1\lib79f\ESP32Servo\ESP32Servo.cpp.o
Compiling .pio\build\esp32doit-devkit-v1\libf16\arduinoFFT\arduinoFFT.cpp.o
Compiling .pio\build\esp32doit-devkit-v1\lib7ac\Update\HttpsOTAUpdate.cpp.o
C:/Users/mweny/Desktop/PROJECT_2/platformio/src/gyro_controller.ino:117:8: error: 'arduinoFFT' does not name a type; did you mean 'ArduinoFFT'?
 static arduinoFFT vibrFFT = arduinoFFT();
        ^~~~~~~~~~
        ArduinoFFT
C:/Users/mweny/Desktop/PROJECT_2/platformio/src/gyro_controller.ino: In function 'void updateVibration()':
C:/Users/mweny/Desktop/PROJECT_2/platformio/src/gyro_controller.ino:652:3: error: 'vibrFFT' was not declared in this scope
   vibrFFT.Windowing(vibrVReal, VIBR_N, FFT_WIN_TYP_HAMMING, FFT_FORWARD);
   ^~~~~~~
C:/Users/mweny/Desktop/PROJECT_2/platformio/src/gyro_controller.ino:652:3: note: suggested alternative: 'vibrIdx'
   vibrFFT.Windowing(vibrVReal, VIBR_N, FFT_WIN_TYP_HAMMING, FFT_FORWARD);
   ^~~~~~~
   vibrIdx
Compiling .pio\build\esp32doit-devkit-v1\lib7ac\Update\Updater.cpp.o
*** [.pio\build\esp32doit-devkit-v1\src\gyro_controller.ino.cpp.o] Error 1
================================== [FAILED] Took 55.61 seconds ==================================

 *  The terminal process "C:\Users\mweny\.platformio\penv\Scripts\platformio.exe 'run'" terminated with exit code: 1. 
